--- a/wiki/PolicyFormat.wiki
+++ b/wiki/PolicyFormat.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-The access control policy describes the desired network security policy through the use of a high-level language that uses keywords and tokens.  Tokens are derived from the naming libraries import of definition files.
+The access control policy describes the desired network security policy through the use of a high-level language that uses keywords and tokens.  Tokens are derived from the [NamingLibrary naming libraries] import of definition files.
 
 
 = Basic Policy File Format =
