Edited wiki page through web user interface.

--- a/wiki/PolicyLibrary.wiki
+++ b/wiki/PolicyLibrary.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-The policy library is intended for parsing the generic high-level policy files and returning a policy object for acl rendering.  The policy library depends on a naming library object to be able to interpret network and service tokens.
+The policy library is intended for parsing the generic high-level policy files and returning a policy object for acl rendering.  The policy library depends on a [NamingLibrary naming library] object to be able to interpret network and service tokens.
 
 
 = Basic Usage =
