Edited wiki page through web user interface.

--- a/wiki/NamingLibrary.wiki
+++ b/wiki/NamingLibrary.wiki
@@ -1,7 +1,7 @@
 #summary Naming Library Usage
 = Introduction =
 
-The naming library is used by the capirca system to parse definitions of network and service data.  These definitions are based on 'tokens' that are used in the high-level policy language.
+The naming library is used by the capirca system to parse definitions of network and service data.  These definitions are based on 'tokens' that are used in the high-level [PolicyFormat policy language].
 
 = Basic Usage =
 
